--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Fluted">
 <meta name="og:title" content="Fluted">
 <meta name="og:description" content="Dev, music tech, translator, gamer.">
-<meta name="og:url" content="https://burkes.pw">
+<meta name="og:url" content="https://notfluted.github.io">
 <meta name="og:type" content="website">
 <meta name="theme-color" content="#0C0C0C">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -18,7 +18,7 @@
 </head>
 <body>
 <section class="section section--column section--spread">
-<h1 class="u-sans">Burkes</h1>
+<h1 class="u-sans">Fluted</h1>
 </section>
 <footer class="footer u-sans u-sans--small">
 <a class="footer__link footer__link--about" href="https://fluted.tumblr.com/info">about</a>
