--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </section>
 <footer class="footer u-sans u-sans--small">
 <a class="footer__link footer__link--about" href="https://fluted.tumblr.com/info">about</a>
-<a class="footer__link footer__link--github" href="https://github.com/notfluted" target="_blank" rel="noopener noreferrer">github</a>
+<a class="footer__link footer__link--github" href="https://github.com/fluteds" target="_blank" rel="noopener noreferrer">github</a>
 <a class="footer__link footer__link--twitter" href="https://twitter.com/notfluted" target="_blank" rel="noopener noreferrer">twitter</a>
 <div class="crumple" aria-hidden></div>
 </footer>
