:speech_balloon: updated links

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <title>Fluted</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
-<meta name="description" content="Dev, music tech, translator, gamer.">
+<meta name="description" content="Gaming? Yes.">
 <meta name="author" content="Fluted">
 <meta name="og:title" content="Fluted">
-<meta name="og:description" content="Dev, music tech, translator, gamer.">
-<meta name="og:url" content="https://notfluted.github.io">
+<meta name="og:description" content="Gaming? Yes.">
+<meta name="og:url" content="https://fluteds.github.io">
 <meta name="og:type" content="website">
 <meta name="theme-color" content="#0C0C0C">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -23,7 +23,7 @@
 <footer class="footer u-sans u-sans--small">
 <a class="footer__link footer__link--about" href="https://fluted.tumblr.com/info">about</a>
 <a class="footer__link footer__link--github" href="https://github.com/fluteds" target="_blank" rel="noopener noreferrer">github</a>
-<a class="footer__link footer__link--twitter" href="https://twitter.com/notfluted" target="_blank" rel="noopener noreferrer">twitter</a>
+<a class="footer__link footer__link--twitter" href="https://twitter.com/fluted_" target="_blank" rel="noopener noreferrer">twitter</a>
 <div class="crumple" aria-hidden></div>
 </footer>
 </body>
