--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="icon" href="link url">
-    <link rel="stylesheet" href="./mvp.css">
+    <link rel="stylesheet" href="./styles.css">
 
     <meta charset="utf-8">
     <meta name="description" content="!! Fluted !!">
