--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="link url">
+    <link rel="icon" href="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fth02.deviantart.net%2Ffs70%2FPRE%2Fi%2F2014%2F017%2F2%2F2%2Fsuper_mario_red_mushroom_pixel_by_komankk-d72gwo0.png&f=1&nofb=1">
     <link rel="stylesheet" href="./styles.css">
 
     <meta charset="utf-8">
@@ -15,32 +15,30 @@
 <body>
     <header>
         <nav>
-            <a href="/"><img alt="Fluted" src="url image" height="70"></a>
+            <a href="https://fluteds.github.io"><img alt="Fluted" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn2.scratch.mit.edu%2Fget_image%2Fuser%2F3334539_60x60.png&f=1&nofb=1" height="70"></a>
             <ul>
-                <li><a href="#">Dropdown Menu Item</a>
+                <li><a href="#">Hover over me!</a>
                     <ul>
                         <li><a href="#">Sublink with a long name</a></li>
                         <li><a href="#">Short sublink</a></li>
                     </ul>
                 </li>
-            </ul>
         </nav>
-        <h1>Welcome to this one page website that I'm redoing.</h1>
-        <p>Hi! I enjoy all things to do with Nintendo Wii, Gaming and music.</p>
+        <h1>Welcome!</h1>
+        <p>I enjoy all things to do with Nintendo Wii, Gaming and music.</p>
         <br>
         <p><a href="https://twitter.com/fluted_"><i>Twitter</i></a><a href="https://github.com/fluteds"><b>Github &rarr;</b></a></p>
     </header>
     <main>
-        <hr>
         <section>
             <header>
-                <h2>Projects!</h2>
-                <p>A Few of my Projects.</p>
+                <h2>Projects</h2>
+                <p>A few of my projects.</p>
             </header>
             <aside>
                 <h3>Status Change <sup>discontinuted</sup></h3>
                 <p>A status changer for the webclient of Discord. Written in Javascript.</p>
-                <p><a href="https://github.com/fluteds/StatusChange"></a></p>
+                <p><a href="https://github.com/fluteds/StatusChange">Repo Link</a></p>
             </aside>
             <aside>
                 <h3>Card heading</h3>
