✏️ title typo fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Customization pointers:
 
 <head>
  
-<title>{Title}</title>
+<title>Fluteds <3</title>
  
 <link rel="shortcut icon" href="{Favicon}">
 
