--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Customization pointers:
 
 <head>
  
-<title>Fluteds <3</title>
+<title>Fluteds | 원숭이도 나무에서 떨어진다</title>
  
 <link rel="shortcut icon" href="{Favicon}">
 
