Updated URL shortener link

--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
 
                         <a href="https://github.com/fluteds/fluteds">readme</a>
                         <a href="https://github.com/fluteds">github</a>
-                        <a href="https://github.com/fluteds">url shortener</a>
+                        <a href="https://github.com/fluteds/s/">url shortener</a>
 
 
                     </div>
