--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>fluteds</title>
 
-    <link rel="shortcut icon" href="http://i1225.photobucket.com/albums/ee381/enix-directory/Pixels/30.gif">
+    <link rel="shortcut icon" href="https://i1225.photobucket.com/albums/ee381/enix-directory/Pixels/30.gif">
 
     <!--------------------JAVASCRIPTS-------------------->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
