--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta>
-    <meta property="og:site_name" content="fluted.xyz">
-    <meta name="theme-color" content="#9c1099">
-    <meta property="og:title" content="fluted.xyz" />
-    <meta property="og:description" content="fluted.xyz" />
-    <meta property="og:url" content="fluted.xyz" />
+    <meta property="sitename" content="fluted.xyz">
+    <meta name="themecolor" content="#9c1099">
+    <meta property="title" content="fluted.xyz" />
+    <meta property="description" content="fluted.xyz" />
+    <meta property="url" content="fluted.xyz" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </meta>
@@ -86,7 +86,7 @@
     <script>
         var typed = new Typed('.typed', {
             strings: ["url"],
-            typeSpeed: 240,
+            typeSpeed: 400,
             showCursor: false
         });
     </script>
@@ -95,7 +95,7 @@
     <script>
         var typed = new Typed('.endtype', {
             strings: ["tttools", "found"],
-            typeSpeed: 240,
+            typeSpeed: 400,
             showCursor: true
         });
     </script>
