Revamp of website

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     }
 </style>
 
+
 <body class="p-8 max-w-xl m-auto">
     <header class="text-center mt-10">
         <a href="/">
@@ -54,58 +55,66 @@
 
     <main class="mt-10">
         <p>
-            i’m fluteds <code class="bg-black py-1 px-2 text-white rounded text-sm">(they/them)</code>, i like to make
-            open sourced things
-            and learn about coding in general.
-            thank you for finding my page! if you came from one of my projects check out
-            some more i've made.
+            i’m fluteds <code class="bg-black py-1 px-2 text-white rounded text-sm">(they/them)</code>
+            and i like to make open sourced things and learn about coding in general.
         </p>
     </main>
 
-    <div class="mt-10">
-        <p>
-            <h3 class="inline font-bold">
-                <span class="typed"></span>.fluted.xyz
-            </h3>
-        </p>
-        <p>
-            <h3 class="inline font-bold">
-                fluted.xyz/<span class="endtype"></span>
-            </h3>
-        </p>
-    </div>
+    <div class="py-8 text-base leading-6 space-y-4">
+        <p></p><strong>who am i?</strong></p>
 
-    <footer class="mt-10 mb-20">
-        <p><a class="border-b border-black" href="https://fluted.xyz" target="_blank">home</a> &bull; <a
-                class="border-b border-black" href="https://twitter.com/fluted_">twitter</a> &bull; <a
-                class="border-b border-black" href="https://github.com/fluteds">github</a></p>
-    </footer>
+        <main class="m-auto">
+            <li> front and back end web designer with a focus for a11y
+            <li> data hoarder & website archiver with a focus for archiving computer software and virus' for research
+            <li> reverse engineering for video games and websites
+            <li> keen to learn more about the programming world
+                </p>
+        </main>
 
-    <script src="https://cdn.statically.io/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script>
-        var typed = new Typed('.typed', {
-            strings: ["url"],
-            typeSpeed: 300,
-            showCursor: false
-        });
-    </script>
+        <div class="mt-10">
+            <p>
+                <h3 class="text-center font-bold">
+                    <span class="typed"></span>.fluted.xyz
+                </h3>
+            </p>
+            <p>
+                <h3 class="text-center font-bold">
+                    fluted.xyz/<span class="endtype"></span>
+                </h3>
+            </p>
+        </div>
 
-    <script src="https://cdn.statically.io/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script>
-        var typed = new Typed('.endtype', {
-            strings: ["tttools", "found"],
-            typeSpeed: 300,
-            showCursor: true
-        });
-    </script>
+        <footer class="text-center mt-10 mb-20">
+            <p><a class="border-b border-black" href="https://fluted.xyz" target="_blank">home</a> &bull; <a
+                    class="border-b border-black" href="https://twitter.com/fluted_">tweets</a> &bull; <a
+                    class="border-b border-black" href="https://github.com/fluteds">code</a></p>
+        </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-    <script>
-        function addDarkmodeWidget() {
-            new Darkmode().showWidget();
-        }
-        window.addEventListener('load', addDarkmodeWidget);
-    </script>
+        <script src="https://cdn.statically.io/libs/typed.js/2.0.11/typed.min.js"></script>
+        <script>
+            var typed = new Typed('.typed', {
+                strings: ["url"],
+                typeSpeed: 250,
+                showCursor: false
+            });
+        </script>
+
+        <script src="https://cdn.statically.io/libs/typed.js/2.0.11/typed.min.js"></script>
+        <script>
+            var typed = new Typed('.endtype', {
+                strings: ["tttools", "found"],
+                typeSpeed: 250,
+                showCursor: true
+            });
+        </script>
+
+        <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+        <script>
+            function addDarkmodeWidget() {
+                new Darkmode().showWidget();
+            }
+            window.addEventListener('load', addDarkmodeWidget);
+        </script>
 </body>
 
 </html>
