revamp of page and added blog link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </meta>
-    <title>fluteds | fluted.xyz</title>
+    <title>fluted.xyz</title>
     <link rel="shortcut icon" href="https://i1225.photobucket.com/albums/ee381/enix-directory/Pixels/30.gif">
     <link rel="stylesheet" href="https://cdn.statically.io/libs/tailwindcss/1.4.6/tailwind.min.css">
     <script async defer data-website-id="b5e7ccf9-0e3a-4e63-809f-e20a382d4c86"
@@ -42,43 +42,48 @@
         TEXT-DECORATION: none;
         font-weight: none
     }
+
+    ::selection {
+        background-color: #ffef0b;
+    }
 </style>
 
 
 <body class="p-8 max-w-xl m-auto">
     <header class="text-center mt-10">
         <a href="/">
-            <h1 class="text-4xl font-bold">welcome!</h1>
+            <h1 class="text-4xl font-bold">🌸</h1>
         </a>
-        <h2 class="font-semibold">thanks for checking out my page</h2>
+        <h2 class="font-semibold">Thanks for checking <br> out my page.</h2>
     </header>
 
     <main class="mt-10">
         <p>
-            i’m fluteds <code class="bg-black py-1 px-2 text-white rounded text-sm">(they/them)</code>
-            and i like to make open sourced things and learn about coding in general.
+            I’m Fluteds, <code class="bg-black py-1 px-2 text-white rounded text-sm">(they/them)</code>
+            and I like to make open sourced things, archive information and learn about coding in general.
         </p>
     </main>
 
     <div class="py-8 text-base leading-6 space-y-4">
-        <p></p><strong>who am i?</strong></p>
+        <p></p>Who am I?</p>
 
         <main class="m-auto">
-            <li> front and back end web designer with a focus for a11y
-            <li> data hoarder & website archiver with a focus for archiving computer software and virus' for research
-            <li> reverse engineering for video games and websites
-            <li> keen to learn more about the programming world
+            <li> A self taught front and back end web designer with a focus for a11y
+            <li> Data hoarder & website archiver
+            <li> Likes reverse engineering for video games and websites
                 </p>
         </main>
 
+        <h2 class="font-weight">More of my projects:</h2>
+
         <div class="mt-10">
             <p>
-                <h3 class="text-center font-bold">
+                <h3 class="text-left font-weight">
                     <span class="typed"></span>.fluted.xyz
                 </h3>
             </p>
             <p>
-                <h3 class="text-center font-bold">
+                <h3 class="text-left font-weight">
                     fluted.xyz/<span class="endtype"></span>
                 </h3>
             </p>
@@ -87,6 +92,7 @@
         <footer class="text-center mt-10 mb-20">
             <p><a class="border-b border-black" href="https://fluted.xyz" target="_blank">home</a> &bull; <a
                     class="border-b border-black" href="https://twitter.com/fluted_">tweets</a> &bull; <a
+                    class="border-b border-black" href="https://blog.fluted.xyz">blog</a> &bull; <a
                     class="border-b border-black" href="https://github.com/fluteds">code</a></p>
         </footer>
 
