Remove ttTools as it's no longer hosted on the `.xyz` domain

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <script src="https://cdn.statically.io/libs/typed.js/2.0.11/typed.min.js"></script>
         <script>
             var typed = new Typed('.endtype', {
-                strings: ["tttools", "found"],
+                strings: ["found"],
                 typeSpeed: 250,
                 showCursor: true
             });
