Tidying up my page a little bit more

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </meta>
-    <title>fluted.xyz</title>
+    <title>Fluted</title>
     <link rel="shortcut icon" href="https://i1225.photobucket.com/albums/ee381/enix-directory/Pixels/30.gif">
     <link rel="stylesheet" href="https://cdn.statically.io/libs/tailwindcss/1.4.6/tailwind.min.css">
     <script async defer data-website-id="b5e7ccf9-0e3a-4e63-809f-e20a382d4c86"
@@ -74,16 +74,16 @@
                 </p>
         </main>
 
-        <h2 class="font-weight">More of my projects:</h2>
+        <h2 class="text-center font-weight">More of my projects:</h2>
 
         <div class="mt-10">
             <p>
-                <h3 class="text-left font-weight">
+                <h3 class="text-center font-weight font-semibold">
                     <span class="typed"></span>.fluted.xyz
                 </h3>
             </p>
             <p>
-                <h3 class="text-left font-weight">
+                <h3 class="text-center font-weight font-semibold">
                     fluted.xyz/<span class="endtype"></span>
                 </h3>
             </p>
@@ -99,7 +99,7 @@
         <script src="https://cdn.statically.io/libs/typed.js/2.0.11/typed.min.js"></script>
         <script>
             var typed = new Typed('.typed', {
-                strings: ["url"],
+                strings: ["url","blog"],
                 typeSpeed: 250,
                 showCursor: false
             });
@@ -108,7 +108,7 @@
         <script src="https://cdn.statically.io/libs/typed.js/2.0.11/typed.min.js"></script>
         <script>
             var typed = new Typed('.endtype', {
-                strings: ["found"],
+                strings: ["found","tttools"],
                 typeSpeed: 250,
                 showCursor: true
             });
