--- a/index.html
+++ b/index.html
@@ -1,124 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta>
-    <meta property="sitename" content="fluted.xyz">
-    <meta name="themecolor" content="#9c1099">
-    <meta property="title" content="fluted.xyz" />
-    <meta property="description" content="fluted.xyz" />
-    <meta property="url" content="fluted.xyz" />
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </meta>
-    <title>Fluted</title>
-    <link rel="shortcut icon" href="https://i1225.photobucket.com/albums/ee381/enix-directory/Pixels/30.gif">
-    <link rel="stylesheet" href="https://cdn.statically.io/libs/tailwindcss/1.4.6/tailwind.min.css">
-    <script async defer data-website-id="b5e7ccf9-0e3a-4e63-809f-e20a382d4c86"
-        src="https://anila.statically.io/script.js">
-    </script>
-</head>
-
-<style type="text/css">
-    a:link {
-        COLOR: black;
-        TEXT-DECORATION: none;
-        font-weight: normal
-    }
-
-    a:visited {
-        COLOR: rgb(66, 66, 66);
-        TEXT-DECORATION: none;
-        font-weight: normal
-    }
-
-    a:active {
-        COLOR: black;
-        TEXT-DECORATION: none
-    }
-
-    a:hover {
-        COLOR: red;
-        TEXT-DECORATION: none;
-        font-weight: none
-    }
-
-    ::selection {
-        background-color: #ffef0b;
-    }
-</style>
-
-
-<body class="p-8 max-w-xl m-auto">
-    <header class="text-center mt-10">
-        <a href="/">
-            <h1 class="text-4xl font-bold">🌸</h1>
-        </a>
-        <h2 class="font-semibold">Thanks for checking <br> out my page.</h2>
-    </header>
-
-    <main class="mt-10">
-        <p>
-            I’m Fluteds, <code class="bg-black py-1 px-2 text-white rounded text-sm">(they/them)</code>
-            and I like to make open sourced things, archive information and learn about coding in general.
-        </p>
-    </main>
-
-    <div class="py-8 text-base leading-6 space-y-4">
-        <p></p>Who am I?</p>
-
-        <main class="m-auto">
-            <li> A self taught front and back end web designer with a focus for a11y
-            <li> Data hoarder & website archiver
-            <li> Likes reverse engineering for video games and websites
-                </p>
-        </main>
-        <h2 class="text-center font-weight">More of my projects:</h2>
-
-        <div class="mt-10">
-            <p>
-                <h3 class="text-center font-weight font-semibold">
-                    <span class="typed"></span>.fluted.xyz
-                </h3>
-            </p>
-            <p>
-                <h3 class="text-center font-weight font-semibold">
-                    fluted.xyz/<span class="endtype"></span>
-                </h3>
-            </p>
-        </div>
-
-        <footer class="text-center mt-10 mb-20">
-            <p><a class="border-b border-black" href="https://fluted.xyz" target="_blank">home</a> &bull; <a
-                    class="border-b border-black" href="https://twitter.com/fluted_">tweets</a> &bull; <a
-                    class="border-b border-black" href="https://github.com/fluteds">code</a></p>
-        </footer>
-
-        <script src="https://cdn.statically.io/libs/typed.js/2.0.11/typed.min.js"></script>
-        <script>
-            var typed = new Typed('.typed', {
-                strings: ["url","blog"],
-                typeSpeed: 250,
-                showCursor: false
-            });
-        </script>
-
-        <script src="https://cdn.statically.io/libs/typed.js/2.0.11/typed.min.js"></script>
-        <script>
-            var typed = new Typed('.endtype', {
-                strings: ["found","tttools"],
-                typeSpeed: 250,
-                showCursor: true
-            });
-        </script>
-
-        <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-        <script>
-            function addDarkmodeWidget() {
-                new Darkmode().showWidget();
-            }
-            window.addEventListener('load', addDarkmodeWidget);
-        </script>
-</body>
-
+<meta http-equiv="refresh" content="1; URL=https://dont-ban.me" />
 </html>
