--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>Fluteds | Redirecting
 <meta http-equiv="refresh" content="1; URL=https://dont-ban.me" />
 </html>
