Closing tag would be nice

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Fluteds | Redirecting
+  <title>Fluteds | Redirecting</title>
 <meta http-equiv="refresh" content="1; URL=https://dont-ban.me" />
 </html>
