--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
   <title>Redirecting - Fluteds</title>
-<meta http-equiv="refresh" content="1; URL=https://dont-ban.me" />
+<meta http-equiv="refresh" content="1; URL=https://fluted.omg.lol" />
 </html>
